# pytorch_dart

./: .gitignore  .gitmodules  .metadata  README.md  pubspec.yaml  setup.dart  wget-log  wget-log.1  wget-log.2  wget-log.3
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/native_pytorch/: NativePytorchPlugin.kt
android/src/main/kotlin/com/example/pytorch_dart/: PytorchDartPlugin.kt
android/src/test/kotlin/com/example/native_pytorch/: NativePytorchPluginTest.kt
android/src/test/kotlin/com/example/pytorch_dart/: PytorchDartPluginTest.kt
cgotorch/: tensor.cc
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/native_pytorch_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/example/pytorch_dart_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: pytorch_dart.podspec
ios/Classes/: NativePytorchPlugin.h  NativePytorchPlugin.m  NativePytorchPlugin.swift  PytorchDartPlugin.h  PytorchDartPlugin.mm  PytorchDartPlugin.swift  Stdafx.h  SwiftNativePytorchPlugin.swift  THSJIT.cpp  THSJIT.hpp  THSTensor.cpp  THSTensor.h  THSTensorFactories.cpp  THSTensorMath.cpp  THSTorch.cpp  THSTorch.hpp  Utils.cpp  native_pytorch.cpp  torch.cc  torch.h
lib/: cString.dart  native_pytorch_method_channel.dart  native_pytorch_platform_interface.dart  pytorch_dart.dart  pytorch_dart_method_channel.dart  pytorch_dart_platform_interface.dart
lib/src/: GCHandleDeleter.dart  constants.dart  device.dart  jitModule.dart  pinnedMemory.dart  scalar.dart  tensor.dart
libtorch-android/include/ATen/: Config.h
libtorch-android/include/caffe2/core/: macros.h
libtorch-android/include/torch/csrc/api/include/torch/: version.h
linux/: CMakeLists.txt  native_pytorch_plugin.cc  native_pytorch_plugin_private.h  pytorch_dart_plugin.cc  pytorch_dart_plugin_private.h
linux/cgotorch/: tensor.cc  tensor.h  torch.cc  torch.h
linux/flutter/ephemeral/: generated_config.cmake
linux/include/pytorch_dart/: native_pytorch_plugin.h  pytorch_dart_plugin.h
linux/test/: native_pytorch_plugin_test.cc  pytorch_dart_plugin_test.cc
scripts/: init_android_linux.sh  init_linux.sh  init_linux_and_android.sh
src/: THSJIT.h  THSTensor.cpp  THSTensor.h  THSTorch.cpp  THSTorch.h  THSVision.h  cuda.h  functional.cc  functional.h  init.h  pickle.cc  tensor.cc  tensor.h  tensor4desktop.cc  tensor4desktop.h  torch.cc  torch.h  torchdef.h
src-win/: device.h  optim.h  pickle.h  tensor.cc
test/: native_pytorch_method_channel_test.dart  native_pytorch_test.dart  pytorch_dart_method_channel_test.dart  pytorch_dart_test.dart
windows/: CMakeLists.txt  pytorch_dart_plugin.cpp  pytorch_dart_plugin.h  pytorch_dart_plugin_c_api.cpp
windows/include/pytorch_dart/: pytorch_dart_plugin.h  pytorch_dart_plugin_c_api.h
windows/test/: pytorch_dart_plugin_test.cpp
